--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body ng-app="myApp">
-  <div class="container" ng-controller="productsController">
+  <div class="container" ng-controller="productsController" ng-init="index()">
     <h1>products controller</h1>
     <div>
       <div>
@@ -34,6 +34,33 @@
             <td>{{ product.name  }}</td>
             <td>HKD: {{ product.price || currency }}</td>
             <td><button ng-click="delete(product)">Delete Product</button></td>
+          </tr>
+        </tbody>
+
+      </table>
+
+    </div>
+  </div>
+
+  <div class="container" ng-controller="ordersController" ng-init="index()">
+
+    <h1>orders controller</h1>
+    <div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Qty Available</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="product in productList">
+            <td>{{ product.name  }}</td>
+            <td>HKD: {{ product.price || currency }}</td>
+            <td>{{ product.getQty() }}</td>
+            <td><button ng-click="buy(product)">BUY</button></td>
           </tr>
         </tbody>
 
